samples/_failures_safe/1761650790_b5e801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cdcf00d.c: In function ‘main’:
./samples/SAFE/__tmp_3cdcf00d.c:159:38: error: missing terminating " character
  159 |                 node1[strcspn(node1, "\
      |                                      ^~
./samples/SAFE/__tmp_3cdcf00d.c:159:17: error: expected expression at end of input
  159 |                 node1[strcspn(node1, "\
      |                 ^~~~~
./samples/SAFE/__tmp_3cdcf00d.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cdcf00d.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3cdcf00d.c:159:17: error: expected declaration or statement at end of input
